<resources>
    <string name="app_name">coachingapp</string>
    <string name="roluri">Roluri</string>
    <string name="utilizatori">Utilizatori</string>
    <string name="sedinte">Sedinte</string>
    <string name="locatii">Locatii</string>
    <string name="feedbacks">Feedbacks</string>
    <string name="materiale">Materiale</string>
    <string name="sarcini">Sarcini</string>
    <string name="istoric_sarcini">Istoric Sarcini</string>
    <string name="atasate_la">Atasate La</string>
    <string name="includ">Includ</string>
    <string name="tabele">Tabele</string>
    <string name="sort">Sort</string>
    <string name="role">Role</string>
    <string name="cancel">CANCEL</string>
    <string name="finish">FINISH</string>
    <string name="accepta">Accepta</string>
    <string name="anuleaza">Anuleaza</string>
    <string name="image_url">Introduceti un url pentru imagine</string>
    <string name="description">Introduceti o scurta descriere</string>
    <string name="role_id">Introduceti denumirea rolului</string>
    <string name="username">Username</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="utilizator">Utilizator</string>
    <string name="username_hint">Introduceti numele utilizatorului</string>
    <string name="name_hint">Introduceti-va numele</string>
    <string name="surname_hint">Introduceti-va prenumele</string>
    <string name="email_hint">O: Introduceti o adresa de email</string>
    <string name="password_hint">Introduceti o parola</string>
    <string name="probleme">Probleme</string>
    <string name="hint_problem_title">Introduceti un titlu pentru problema</string>
    <string name="hint_problem_description">Introduceti o descriere pentru problema</string>
    <string name="hint_problem_state">Introduceti starea problemei</string>
    <string name="location_title">Locatie</string>
    <string name="location_street_hint">Introduceti strada unde se afla locatia</string>
    <string name="location_alias_hint">O: Introduceti o denumire uzuala a locatiei</string>
    <string name="location_image_url_hint">Introduceti un link cu o imagine a locatiei</string>
    <string name="client">Client</string>
    <string name="coach">Coach</string>
    <string name="feedback_title_hint">Introduceti un titlu</string>
    <string name="feedback_content_hint">Spuneti-va parerea despre sedinta</string>
    <string name="feedback">Feedback</string>
    <string name="material_">Material</string>
    <string name="insert_title">Introduceti un titlu</string>
    <string name="insert_source">Introduceti link-ul catre sursă</string>
    <string name="insert_summary">O: Scrieti un scurt rezumat</string>
    <string name="insert_image_url">O: Introduceti link catre imagine</string>
    <string name="insert_estimated_time">O: Introduceti un timp estimat</string>
    <string name="task_history">Istoric sarcina</string>
    <string name="hint_description">Descriere . . .</string>
    <string name="generated_text_1">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Eu non diam phasellus vestibulum. Neque viverra justo nec ultrices dui sapien eget. Sem et tortor consequat id. Viverra maecenas accumsan lacus vel facilisis volutpat est velit egestas. Habitant morbi tristique senectus et. Turpis nunc eget lorem dolor sed viverra ipsum nunc aliquet.</string>
    <string name="insert_task_hint">Introduceti titlul sarcinii</string>
    <string name="insert_task_score_hint">O: Introduceti scorul acestei sarcini</string>
    <string name="task_time_hint">O: Introduceti un timp estimativ.</string>
    <string name="task_desc_hint">Introduceti o scurta descriere</string>
    <string name="sarcina">Sarcina</string>
    <string name="session">Sedință</string>
    <string name="insert_start_date">Introduceti data de incepere</string>
    <string name="session_discussion">Introduceti discutia din cadrul sedintei</string>
    <string name="pick_problem">Alegeti o problema:</string>
    <string name="pick_location">Alegeti o locatie:</string>
    <string name="ata_at_la">ATAȘAT LA</string>
    <string name="insert_sessions_materials">O: Introduceti timpul valabil accesarii unui material</string>
    <string name="pick_session">Alegeti o sedinta:</string>
    <string name="pick_material">Alegeti un material:</string>
    <string name="pick_task">Alegeti o sarcina:</string>
    <string name="insert_priority">O: Introduceti nivelul de prioritate (0 – 10)</string>
    <string name="filter">Filtru</string>
    <string name="avg_score">Scorul mediu sa fie mai mare sau egal cu</string>
    <string name="max_grade">Nota maxima sa fie mai mare sau egala cu</string>
</resources>
