<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="fragment"
            type="com.faculty.fusedbloxxer.coachingapp.home.materials.MaterialModFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/material_"
            android:textAlignment="center"
            android:textAppearance="@style/ModTitle"
            app:layout_constraintBottom_toTopOf="@+id/material_id_text_view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/accept_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{()->fragment.onAccept()}"
            android:text="@string/accepta"
            app:layout_constraintBottom_toBottomOf="@+id/cancel_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cancel_button"
            app:layout_constraintTop_toTopOf="@+id/cancel_button" />

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="@{()->fragment.onCancel()}"
            android:text="@string/anuleaza"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/accept_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/material_time_edit_text" />

        <EditText
            android:id="@+id/material_title_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/insert_title"
            android:inputType="textPersonName"
            app:layout_constraintBottom_toTopOf="@+id/material_source_edit_text"
            app:layout_constraintEnd_toEndOf="@+id/material_source_edit_text"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/material_source_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/material_id_text_view" />

        <EditText
            android:id="@+id/material_source_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/insert_source"
            android:inputType="textUri"
            app:layout_constraintBottom_toTopOf="@+id/material_image_edit_text"
            app:layout_constraintEnd_toEndOf="@+id/material_image_edit_text"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/material_image_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/material_title_edit_text" />

        <EditText
            android:id="@+id/material_image_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/insert_image_url"
            android:inputType="textUri"
            app:layout_constraintBottom_toTopOf="@+id/material_summary_edit_text"
            app:layout_constraintEnd_toEndOf="@+id/material_summary_edit_text"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/material_summary_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/material_source_edit_text" />

        <EditText
            android:id="@+id/material_summary_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/insert_summary"
            android:inputType="textMultiLine"
            app:layout_constraintBottom_toTopOf="@+id/material_time_edit_text"
            app:layout_constraintEnd_toEndOf="@+id/material_time_edit_text"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/material_time_edit_text"
            app:layout_constraintTop_toBottomOf="@+id/material_image_edit_text" />

        <EditText
            android:id="@+id/material_time_edit_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/insert_estimated_time"
            android:inputType="number"
            app:layout_constraintBottom_toTopOf="@+id/cancel_button"
            app:layout_constraintEnd_toEndOf="@+id/accept_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/cancel_button"
            app:layout_constraintTop_toBottomOf="@+id/material_summary_edit_text" />

        <TextView
            android:id="@+id/material_id_text_view"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            app:layout_constraintBottom_toTopOf="@+id/material_title_edit_text"
            app:layout_constraintEnd_toEndOf="@+id/textView5"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="@+id/textView5"
            app:layout_constraintTop_toBottomOf="@+id/textView5"
            tools:text="ID: 25123" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>