<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:elevation="4dp"
    android:orientation="vertical"
    app:cardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <TextView
            android:id="@+id/username_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline2"
            app:layout_constraintBottom_toTopOf="@+id/full_name_textView"
            app:layout_constraintEnd_toEndOf="@+id/full_name_textView"
            app:layout_constraintStart_toStartOf="@+id/full_name_textView"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/username" />

        <TextView
            android:id="@+id/full_name_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            app:layout_constraintBottom_toTopOf="@+id/user_role_textView"
            app:layout_constraintEnd_toEndOf="@+id/user_role_textView"
            app:layout_constraintStart_toStartOf="@+id/user_role_textView"
            app:layout_constraintTop_toBottomOf="@+id/username_textView"
            tools:text="@string/full_name" />

        <TextView
            android:id="@+id/user_role_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
            app:layout_constraintBottom_toTopOf="@+id/email_textView"
            app:layout_constraintEnd_toEndOf="@+id/email_textView"
            app:layout_constraintStart_toStartOf="@+id/email_textView"
            app:layout_constraintTop_toBottomOf="@+id/full_name_textView"
            tools:text="@string/role" />

        <TextView
            android:id="@+id/email_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintBottom_toTopOf="@+id/user_password_textView"
            app:layout_constraintEnd_toEndOf="@+id/user_password_textView"
            app:layout_constraintStart_toStartOf="@+id/user_password_textView"
            app:layout_constraintTop_toBottomOf="@+id/user_role_textView"
            tools:text="@string/email_address" />

        <TextView
            android:id="@+id/user_password_textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/email_textView"
            tools:text="@string/password" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>